--- a/index.html
+++ b/index.html
@@ -78,7 +78,14 @@
 								</div>
 							</div>
 							<div class="prt_about_details">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pharetra felis tempus auctor lacinia. Aliquam euismod enim vulputate efficitur facilisis. Quisque eget consequat ligula, quis fringilla leo. In tristique vitae odio id tincidunt. Ut vestibulum, ex id sodales dictum, sem metus porttitor velit, eu maximus ipsum ex at libero. Donec ipsum elit, euismod et vulputate vel, iaculis ac ipsum. In massa mi, ullamcorper vitae scelerisque vitae, aliquam eu justo. Morbi iaculis, metus in suscipit convallis, augue urna porttitor purus, et blandit lacus ipsum sit amet lacus.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pharetra felis tempus
+									auctor lacinia. Aliquam euismod enim vulputate efficitur facilisis. Quisque eget
+									consequat ligula, quis fringilla leo. In tristique vitae odio id tincidunt. Ut
+									vestibulum, ex id sodales dictum, sem metus porttitor velit, eu maximus ipsum ex at
+									libero. Donec ipsum elit, euismod et vulputate vel, iaculis ac ipsum. In massa mi,
+									ullamcorper vitae scelerisque vitae, aliquam eu justo. Morbi iaculis, metus in
+									suscipit convallis, augue urna porttitor purus, et blandit lacus ipsum sit amet
+									lacus.</p>
 								<a href="#" class="prt_btn">Download Resume</a> <a href="#" class="prt_btn">Hire Me</a>
 							</div>
 						</div>
@@ -761,7 +768,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<p>Copyright © 2022 <a href="#">Portfolio</a>. All Rights Reserved</p>
+							<p>Copyright © 2022 <a href="#">thaipham-coder</a>. All Rights Reserved</p>
 							<ul>
 								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
